--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "@fortawesome/fontawesome-free": "^6.1.1",
         "admin-lte": "^3.2.0",
         "autoprefixer": "10.4.5",
+        "jquery": "^3.6.1",
         "vue": "^3.2.36",
-        "vue-router": "^4.0.16"
+        "vue-router": "^4.1.5"
     }
 }
