--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "admin-lte": "^3.2.0",
         "autoprefixer": "10.4.5",
         "jquery": "^3.6.1",
+        "laravel-vue-pagination": "^3.0.0",
+        "sweetalert2": "^11.4.38",
         "vue": "^3.2.36",
         "vue-router": "^4.1.5"
     }
